--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://hungms.github.io/deseq2pip/
+URL: https://hungms.github.io/deseq2pip/, https://hungms.github.io/annotatepip/
 LazyData: true
 Depends: 
     BiocManager,
