--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,36 +1,36 @@
-url: https://hungms.github.io/annotatepip
+url: https://hungms.github.io/annotatepip/
 authors:
   Matthew Hung:
     href: https://hungms.github.io/Portfolio/
-
 template:
   bootstrap: 5
   bootswatch: flatly
-
 navbar:
   structure:
     left:
-      - articles
-      - reference
+    - articles
+    - reference
     right:
-      - search
-      - github
-      - lightswitch
-
+    - search
+    - github
+    - lightswitch
 reference:
-  - title: Strings/Patterns
-    contents:
-      - ends_with(".string")
-  - title: Format Genes
-    contents:
-      - matches("get_xy_genes")
-      - matches("get_mt_genes")
-      - matches("get_str_genes")
-  - title: Gene Conversion
-    contents:
-      - matches("convert_")
-  - title: Format Functions
-    contents:
-      - starts_with("import_")
-      - starts_with("read_")
-      - starts_with("write_")
+- title: Strings/Patterns
+  contents: ends_with(".string")
+- title: Format Genes
+  contents:
+  - matches("get_xy_genes")
+  - matches("get_mt_genes")
+  - matches("get_str_genes")
+- title: Gene Conversion
+  contents:
+  - starts_with("import_biomart")
+  - matches("convert_human")
+  - matches("convert_mouse")
+- title: Format Functions
+  contents:
+  - starts_with("run_annotation")
+  - starts_with("read_")
+  - starts_with("write_")
+  - starts_with("convert_list")
+
